==================================================================================================
Changes for 3.4.3  
==================================================================================================
- Added TIME_MASTER option for IOP models.	
	- IOP will send GPS time and cycle via PCIe network to sync other computers.
- Added CDS time synchronized version of long range switch code (cdsrfmrouter.c).
==================================================================================================
Changes for 3.4.2  
==================================================================================================
- Increased the number of IPC per transmission type from 512 to 1024. This was done due to IPC
  counts on PCIe network approaching 500 at the sites.
- Fixed EPICS startup file to test against existence of proper log file ie path was wrong.
- Fixed bug in cdsrfmswitch. Code was not unmapping Dolphin cards properly when module removed.
==================================================================================================
Changes for 3.4.1  
==================================================================================================
- Bug Fix: Support for 20bit DAC was not included in 3.4. This release reinstates that support.
==================================================================================================
Changes for 3.4  
==================================================================================================
- Bug Fix (1112): Add support for Indigo,ANU,UWA,Cardiff site/ifo in feCodeGen.pl
- Bug Fix (1102): Remove use on unitialized array in daqd rcv build
- Changed method for setting compile options to use Dolphin Gen2 cards and Long Range PCIe.
- Matlab CDS_PARTS updated to use Matlab version 2015b.
- Added run_number server to generate configuration/run numbers for frames.  This is a separate proces
  to prepare for future dual data concentrator work.