@@ -1,6 +1,9 @@
 ==================================================================================================
 Changes for 3.4.3  
 ==================================================================================================
+- Bug Fix: Move rearming of ADC Demand DMA in IOP models from as ADC data is read in to after
+  call to feCode(), IOP model code. Found that there was bus contention issues if IOP model was
+  sending PCIe IPC at 65K.
 - Added TIME_MASTER option for IOP models.	
 	- IOP will send GPS time and cycle via PCIe network to sync other computers.
 - Added CDS time synchronized version of long range switch code (cdsrfmrouter.c).
